correct text-align

--- a/static/css/404.css
+++ b/static/css/404.css
@@ -19,4 +19,5 @@ a {
     text-decoration: none;
     color: #fff;
     font-size: 2.5vw;
+    text-align: center;
 }
